--- a/contacto.html
+++ b/contacto.html
@@ -114,7 +114,7 @@
 
 
 
-        <form name="contact" method="post" class="formulario-email" target="_blank" action="exito.html" data-netlify="true">
+        <form name="contact" method="post" class="formulario-email" target="_blank" action="exito.html" netlify>
             <input type="hidden" name="subject" 
             value="Sales inquiry from mysitename.netlify.app" />
 
@@ -127,13 +127,13 @@
 
             <div class="campo">
                 <label for="message">Escriba su solicitud, pregunta o comentario</label>
-                <textarea class="textarea" id="message" cols="50" rows="8" required placeholder=""></textarea>
+                <textarea class="textarea" id="message" name="message" cols="50" rows="8" required placeholder=""></textarea>
             </div>
 
             <button type="submit" value="Enviar"  class="formulario-btn">Enviar</button>
             <input type="hidden" name="form-name" value="contact">
         </form>
-        <h3>Nos comunicaremos a la brevedad</h3>
+        <h3>Nos comunicaremos a la brevedad, muchísimas gracias.</h3>
 
 
 
