--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </head>
 
 <body>
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0" nonce="7WWrfXe5"></script>
 
 
     <nav id="nav" class="main-nav">
@@ -165,6 +166,7 @@
 
 
     </div>
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGuidosabatocanciones%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
     <ul class="grid">
         <li class="fotogaleria">
@@ -254,14 +256,9 @@
 
         <div class="fb-container" id="fb-scroll">
 
-
-            <div class="fb-page" data-href="https://www.facebook.com/Casadesabato/" data-tabs="timeline"
-                data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false"
-                data-hide-cover="false" data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/Casadesabato/" loading="lazy" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/Casadesabato/">La casa de Ernesto Sabato.</a></blockquote>
-            </div>
+            <div class="fb-page" data-href="https://www.facebook.com/Casadesabato" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Casadesabato" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Casadesabato">La casa de Ernesto Sabato.</a></blockquote></div>
         </div>
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCasadesabato&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         <div class="footer__text">
 
             <h2>Visitas Guiadas por Guido y Luciana Sabato, nietos del escritor.</h2>
@@ -281,9 +278,9 @@
                 Para reservar escribir al 11361 49927 o 11 6167 7626</p>
 
         </div>
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGuidosabatocanciones%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     </footer>
-    <div id="fb-root"></div>
-
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcasadesabato&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
         nonce="GHee4sYv"></script>
 
